Worked on the Post Model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,18 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  
 
   <body>
+  <section>
+  <h1 class="member text-center">Welcome to Members Only</h1>
+  <nav class="nav nav-pills flex-column flex-sm-row">
+  <a class="flex-sm-fill text-sm-center nav-link active" href="#!">Sign In</a>
+  <a class="flex-sm-fill text-sm-center nav-link" href="#!">Sign Up</a>
+</nav>
+  </section>
+  
+
     <%= yield %>
   </body>
 </html>
