--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,18 @@
   </head>
   
 
-  <body>
-  <section>
-  <h1 class="member text-center">Welcome to Members Only</h1>
-  <nav class="nav nav-pills flex-column flex-sm-row">
-  <a class="flex-sm-fill text-sm-center nav-link active" href="#!">Sign In</a>
-  <a class="flex-sm-fill text-sm-center nav-link" href="#!">Sign Up</a>
-</nav>
-  </section>
-  
-
-    <%= yield %>
+  <body class="d-flex flex-column align-items-center">
+    <section>
+      <h1 class="member text-center">Welcome to Members Only</h1>
+      <hr>
+      <nav class="nav nav-pills flex-column flex-sm-row">
+        <a class="flex-sm-fill text-sm-center nav-link btn btn-primary mr-2" href="#!">Sign In</a>
+        <a class="flex-sm-fill text-sm-center nav-link btn btn-outline-secondary" href="#!">Sign Up</a>
+      </nav>
+    </section>
+    
+    <div class="d-flex flex-column align-items-center">
+      <%= yield %>
+    </div>
   </body>
 </html>
