--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
     <section>
       <h1 class="member text-center">Welcome to Members Only</h1>
       <hr>
-      <% if user_signed_in?%>
-        <%= link_to "Log Out", destroy_user_session_path(current_user.id),:method => 'delete', class: "flex-sm-fill text-sm-center nav-link btn btn-primary mr-2" %>
+      <% if user_signed_in? %>
+        <%= link_to "Log Out", destroy_user_session_path,:method => 'delete', class: "flex-sm-fill text-sm-center nav-link btn btn-primary mr-2" %>
       <% else %>
         <nav class="nav nav-pills flex-column flex-sm-row">
           <%= link_to "Sign In", new_user_session_path, class: "flex-sm-fill text-sm-center nav-link btn btn-primary mr-2" %>
