--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,14 +5,25 @@
 </div>
 
 <% @posts.each do |post| %>
-<div class="card mb-2 w-50">
+<div class="card mb-2 w-100">
   <div class="card-body text-wrap">
     <%= post.content %>
+    <% if user_signed_in? %>
+    <br>
+    <br>
+    <p> <%= post.user.name + " ,created this." %></p>
+    <% if current_user.id == post.user.id %>
+
     <div class="mt-3">
+    
       <%= link_to 'Show', post %>
       <%= link_to 'Edit', edit_post_path(post) %>
       <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
     </div>
+    <% end %>
+    <% end %>
+
+    
   </div>
 </div>
 <% end %>
